[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/Inventory/InventorySlot.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/Inventory/InventoryDisplay.gd" type="Script" id=2]

[node name="InventoryDisplay" type="Control"]
anchor_left = 0.902
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.351929
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FrameRect" type="ColorRect" parent="."]
offset_left = 10.0
offset_top = 10.0
offset_right = 90.0
offset_bottom = 590.0
color = Color( 0.12549, 0.12549, 0.12549, 0.12549 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InventorySlot_0" parent="FrameRect" instance=ExtResource( 1 )]
position = Vector2( 40, 40 )

[node name="SelectRect" type="ColorRect" parent="FrameRect/InventorySlot_0"]
show_behind_parent = true
offset_left = -35.0
offset_top = -35.0
offset_right = 35.0
offset_bottom = 35.0
color = Color( 0, 0, 0, 0.501961 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InventorySlot_1" parent="FrameRect" instance=ExtResource( 1 )]
position = Vector2( 40, 110 )

[node name="InventorySlot_2" parent="FrameRect" instance=ExtResource( 1 )]
position = Vector2( 40, 180 )

[node name="InventorySlot_3" parent="FrameRect" instance=ExtResource( 1 )]
position = Vector2( 40, 250 )

[node name="InventorySlot_4" parent="FrameRect" instance=ExtResource( 1 )]
position = Vector2( 40, 320 )

[node name="InventorySlot_5" parent="FrameRect" instance=ExtResource( 1 )]
position = Vector2( 40, 390 )

[node name="InventorySlot_6" parent="FrameRect" instance=ExtResource( 1 )]
position = Vector2( 40, 460 )

[node name="InventorySlot_7" parent="FrameRect" instance=ExtResource( 1 )]
position = Vector2( 40, 530 )
